--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "fingerprintjs2": "^2.1.0",
     "geolib": "^3.1.0",
     "hammerjs": "^2.0.8",
+    "localforage": "^1.5.0",
     "mapbox-gl": "^1.9.1",
+    "ngforage": "^5.0.0",
     "ngx-mapbox-gl": "^4.5.0",
     "ngx-take-until-destroy": "^5.4.0",
     "rxjs": "~6.5.3",
