--- a/package.json
+++ b/package.json
@@ -11,62 +11,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fortawesome/angular-fontawesome": "^0.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@ng-select/ng-select": "^3.6.0",
-    "@turf/along": "^6.0.1",
-    "@turf/turf": "^5.1.6",
-    "ahoy.js": "^0.3.4",
-    "angular-resize-event": "^1.1.1",
+    "@angular/animations": "^11.2.2",
+    "@angular/cdk": "^11.2.1",
+    "@angular/common": "~11.2.2",
+    "@angular/compiler": "~11.2.2",
+    "@angular/core": "~11.2.2",
+    "@angular/forms": "~11.2.2",
+    "@angular/material": "^11.2.1",
+    "@angular/platform-browser": "~11.2.2",
+    "@angular/platform-browser-dynamic": "~11.2.2",
+    "@angular/router": "~11.2.2",
+     "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@ng-select/ng-select": "^6.1.0",
+    "@turf/along": "^6.3.0",
+    "@turf/turf": "^6.3.0",
+    "ahoy.js": "^0.3.8",
+    "angular-resize-event": "^2.1.0",
     "deep-diff": "^1.0.2",
-    "fingerprintjs2": "^2.1.0",
-    "geolib": "^3.1.0",
+    "fingerprintjs2": "^2.1.2",
+    "geolib": "^3.3.1",
     "hammerjs": "^2.0.8",
-    "localforage": "^1.5.0",
-    "mapbox-gl": "^1.9.1",
-    "ngforage": "^5.0.0",
-    "ngx-mapbox-gl": "^4.5.0",
+    "localforage": "^1.9.0",
+    "mapbox-gl": "^1.13.1",
+    "ngforage": "^6.0.0",
+    "ngx-mapbox-gl": "^6.0.4",
     "ngx-take-until-destroy": "^5.4.0",
-    "rxjs": "~6.5.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "~6.6.3",
+    "tslib": "^2.1.0",
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.19",
-    "@angular/cli": "~8.3.19",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~3.4.6",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/mapbox-gl": "^1.5.2",
-    "@types/node": "~12.12.7",
+    "@angular-devkit/build-angular": "^0.1102.1",
+    "@angular/cli": "^11.2.1",
+    "@angular/compiler-cli": "^11.2.2",
+    "@angular/language-service": "^11.2.2",
+    "@types/jasmine": "^3.6.3",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/mapbox-gl": "^2.0.3",
+    "@types/node": "^14.14.22",
     "asyncawait": "^3.0.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.18.2",
-    "codelyzer": "^5.2.0",
+    "codelyzer": "^6.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.4.1",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "^5.2.3",
+    "karma-coverage": "~2.0.3",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "lodash": "^4.17.15",
-    "protractor": "~5.4.0",
-    "ts-node": "~8.5.0",
-    "tslint": "~5.20.1",
-    "typescript": "~3.5.0"
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "lodash": "^4.17.21",
+    "protractor": "~7.0.0",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "~4.0.5"
   }
 }
