--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fingerprintjs2": "^2.1.2",
     "geolib": "^3.3.1",
     "hammerjs": "^2.0.8",
+    "humanize-duration": "^3.27.1",
     "localforage": "^1.9.0",
     "mapbox-gl": "^1.13.1",
     "ngforage": "^6.0.0",
