--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ngx-mapbox-gl": "^6.0.4",
     "ngx-take-until-destroy": "^5.4.0",
     "proximiio-js-library": "^1.9.19",
+    "remove-accents": "^0.4.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.3"
