--- a/angular.json
+++ b/angular.json
@@ -64,19 +64,24 @@
                   "maximumError": "5mb"
                 }
               ]
-            }
-          }
+            },
+            "development": {}
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-wayfinding-client:build"
           },
           "configurations": {
             "production": {
               "browserTarget": "ngx-wayfinding-client:build:production"
+            },
+            "development": {
+              "browserTarget": "ngx-wayfinding-client:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -119,14 +124,17 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-wayfinding-client:serve"
+            "protractorConfig": "e2e/protractor.conf.js"
           },
           "configurations": {
             "production": {
               "devServerTarget": "ngx-wayfinding-client:serve:production"
+            },
+            "development": {
+              "devServerTarget": "ngx-wayfinding-client:serve:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         }
       }
     }},
