chore(.gitignore): add .angular/* to the gitignore file
chore(angular.json): enable build optimizer and AOT compilation for improved performance

chore(package.json): update dependencies to their latest versions

chore(angular-material.module.ts): update imports to use the legacy versions of Angular Material modules

chore(ng-select.directive.ts): update import to use the legacy version of MatFormFieldControl

chore(settings-dialog.component.ts): update import to use the legacy version of MatDialogRef

chore(map.component.ts): update import to use the legacy version of MatDialog

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "buildOptimizer": true,
+            "aot": true,
             "baseHref": "/wayfinding/",
             "assets": [
               "src/favicon.ico",
