--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "baseHref": "/wayfinding-demo/",
+            "baseHref": "/wayfinding/",
             "buildOptimizer": true,
             "aot": true,
             "assets": [
