--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "geolib": "^3.3.4",
     "hammerjs": "^2.0.8",
     "humanize-duration": "^3.29.0",
-    "mapbox-gl": "^1.13.1",
+    "maplibre-gl": "^3.3.1",
     "ngx-take-until-destroy": "^5.4.0",
-    "proximiio-js-library": "^1.9.38",
+    "proximiio-js-library": "^1.9.39",
     "remove-accents": "^0.5.0",
     "rxjs": "~6.6.3",
     "simple-keyboard": "^3.7.8",
