--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,9 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "useDefineForClassFields": false
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2018", "dom"],
+    "useDefineForClassFields": false,
+    "skipLibCheck": true
   }
 }
